apps/authentik/networkpolicies/ingress-allow-cloudnative-pg-operator.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-allow-cloudnative-pg-operator
  namespace: authentik
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: authentik-database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudnative-pg
